--- a/Biblioteca1/biblioteca1.html
+++ b/Biblioteca1/biblioteca1.html
@@ -1,64 +1,37 @@
-<!-- Colocar identação correcta, facilita a leitura -->
-
-<DOCTYPE html> <!-- faltava um < no início do elemento -->
+<DOCTYPE html> 
 <html>
-	<!-- Estás a confundir o elemento <header> com o elemento <head>, aqui
-		queres definir um <head>, vê a diferença nos apontamentos para clarificares as dúvidas -->
-	<head>
-		<meta charset="utf-8">
-		<title>Biblioteca Municipal</title>
-	</head>
-
-	<!-- <header>
-		<meta charset="utf-8">
-		<title>Biblioteca Municipal</title>
-		<h1>Bliblioteca da Vila</h1>
-	</header> -->
-	<body>
-		<header>
-			<h1>Biblioteca da Vila</h1>
-		</header>
-		<nav>
-			<ul>
-				<!-- Nota de boas práticas: não utilizar maiúsculas nem caracteres especiais (ex.: #servicos)
-				e normalmente escrevemos tudo o que é código em inglês (ex.: #services) -->
-				<!-- o elemento <i> deve vir imediatamente a seguir ao <ul> e só depois a <a> -->
-				<a href="#Biblioteca"><li>A biblioteca</li></a>
-				<a href="#Serviços"><li>Serviços e Atividades</li></a>
-				<a href="#Membro"><li>Torna-te membro</li></a>
-				<a href="#Contactos"><li>Contactos</li></a>
-			</ul>
-		</nav>
-		<article> <!-- retirar elemento article, não é necessário, deixar só as sections -->
-			<!-- retiramos aqui o elemento âncora e colocamos um id="Biblioteca" no elemento para onde queremos que a nossa âncora nos reenvie, já temos a âncora no elemnto que queremos que seja direccionado aqui estamos apenas a identificar o elemento de chegada, fazer o mesmo em todas as secções -->
-			<section id="Biblioteca">
-				<h1>A Biblioteca <!-- <a name="Biblioteca"></a> --> </h1>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<!-- Neste caso a imagem não necessita de estar dentro de uma âncora pois não estamos a pedir que ela faça ligação com outra página ou secção-->
-				<a href="Livros">
-					<img src="./biblioteca/assets/img/livros.jpeg">
-				</a>
-			</section>
-			<section>
-				<h1>Serviços e Atividades<a name="Serviços"></a></h1>
-				<!-- sugiro h2 no parágrafo abaixo -->
-				<h1>Aqui podes encontrar informação sobre os nossos serviços e actividades</h1>
-				<pre><!-- retirar elemento <pre> -->
-					
-				</pre>
-			</section>
-			<section></section> <!-- tens o elemento <section> a ser fechado 2x, esta está a mais -->
+<head>
+	<meta charset="utf-8">
+	<title>Biblioteca Municipal</title>
+</head>
+<body>
+	<header>
+		<h1>Biblioteca da Vila</h1>
+	</header>
+	<nav>
+		<ul>	
+			<li><a href="#biblioteca">A biblioteca</a></li>
+			<li><a href="#serviços">Serviços e Atividades</a></li>
+			<li><a href="#membro">Torna-te membro</a></li>
+			<li><a href="#contactos">Contactos</a></li>
+		</ul>
+	</nav>
+		<section id="biblioteca">
+			<h1>A Biblioteca <!-- <a name="Biblioteca"></a> --> </h1>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+			<img src="./img/livros.jpeg">
+		</section>
+		<section id="servicos">
+			<h1>Serviços e Atividades<a name="Serviços"></a></h1>
+			<h2>Aqui podes encontrar informação sobre os nossos serviços e actividades</h2>
+			<br>
 			<h3>Serviços</h3>
-			<!-- retirar o <p> vazio, nesta fase para inserir um espaçamento utilizar <br>, rever em todos -->
-			<p></p>
 			<ul>
 				<li>Acesso a repositórios especializados em diversas áreas</li>
 				<li>Wireless gratuito</li>
 				<li>Máquina e bebidas e snacks</li>
 			</ul>
-			<p></p>
 			<h3>Atividades</h3>
-			<p></p>
 			<ul>
 				<li>Hora do conto</li>
 				<ol>
@@ -79,16 +52,16 @@
 				</ol>
 			</ul>
 		</section>
-		<section>
-			<h1>Torna-te membro<a name="Membro"></a></h1>
-			<h1>É simples e rápido</h1> <!-- utilizar h2 -->
+		<section id="membro">
+			<h1>Torna-te membro</h1>
+			<h2>É simples e rápido</h2>
 			<table border="1">
-				<tr> <!-- opção usar <thead> -->
-					<th></th>
-					<th>Acesso</th>
-					<th>Actividades</th>
-					<th>Preço</th>
-				</tr>
+				<thead>
+					<td></td>
+					<td>Acesso</td>
+					<td>Actividades</td>
+					<td>Preço</td>
+				</thead>
 				<tr>
 					<td>Cartão Livrólico</td>
 					<td>Acesso ás nossas instalações todos os dias</td>
@@ -105,81 +78,62 @@
 					<td colspan="4">*Temos descontos para famílias, consulte as condições</td>
 				</tr>
 			</table>
+			<br/>
+			<form>
+				<fieldset>
+				<legend>Dados pessoais:</legend>br></legend>
+				<select name="Opção">
+					<option value="cartao livrolico">Cartão Livrólico</option>
+					<option value="cartao amigo">Cartão Amigo dos Livros</option>
+				</select>
+				</fieldset>
+			<fieldset>
+				<legend><b>Dados pessoais:</b></legend> 
+				Nome: <input type="text" name="nome"><br> Sexo:
+				<input type="radio" name="genero" value="Masculino" checked> Masculino
+				<input type="radio" name="genero" value="Feminino"> Feminino <br><br>
+				Data de Nascimento: <input type="date" name="nascimento"> <br> <br>
+				Estado Civil:
+				<select name="escolha uma opcao">
+					<option value="escolha" disabled selected>Escolha uma opção</option>
+					<option value="casado"> Casado</option>
+					<option value="solteiro"> Solteiro</option>
+					<option value="divorciado"> Divorciado</option>
+					<option value="viuvo"> Viúvo</option>
+				</select> 
+				Nr de filhos: <input type="number" name="escala" min="0" max="5" step="1"> <br>
+			</fieldset>
+			<br><br>
+			<fieldset>
+				<legend><b>Contactos:</b></legend> 
+				Código-Postal
+				<input type="text" name="indicativo" placeholder="0000" pattern="[0-9]{4}" size="4" title="Pf insira o indicativo de quatro dígitos.">
+				<input type="text" name="extensao" placeholder="000" pattern="[0-9]{3}" size="3" title="Pf insira a extensão de 3 dígitos.">
+				<br><br>Morada:<br>
+				<textarea name="morada" rows="5" cols="100"></textarea>
+				<br><br>Email:<input type="email" name="email:" placeholder="exemplo@hotmail.com">
+				<br><br>Password: <input type="password" name="password:">
+			</fieldset>
+			<div>
+				<small>
+				<i>Pretendo ser contactado através de:</i>
+				<input type="checkbox" name="Email" checked>Email
+				<input type="checkbox" name="Telemovel" checked>Telemóvel
+				<input type="checkbox" name="Correio" checked>Correio
+				</small><br>
+				<input type="limpar" value="Limpar">
+				<input type="confirmar" value="Confirmar">
+			</div>
+		</form>
 		</section>
-<p></p>
-
-<!-- Sugiro refazeres esta parte, neste momento tens vários forms, deves ter apenas um com toda a estrutura de campos dentro desse form -->
-<fieldset>
-	<legend>Dados pessoais:</legend>
-	<form>
-		<select name="Opção">
-			<option value="Cartão Livrólico">Cartão Livrólico</option>
-			<option value="Cartão Amigo dos livros">Cartão Amigo dos Livros</option>
-		</select>
-	</form>
-</fieldset>
-<fieldset>
-	<legend>Dados pessoais:</legend> Nome:
-	<input type="text" name="nome"><br>
-	<p></p>
-	Sexo:
-	<!-- apenas um radio button deve estar anotado como checked -->
-	<input type="radio" name="genero" value="Masculino" checked> Masculino
-	<input type="radio" name="genero" value="Feminino" checked> Feminino <br>
-	<p></p>
-	<form>
-		Data de nascimento:
-		<input type="date" name="nascimento">
-	</form>
-	<p></p>
-	Estado Civil:
-	<select name="Escolha uma opção">
-		<option value="casado"> Casado</option>
-		<option value="solteiro"> Solteiro</option>
-		<option value="divorciado"> Divorciado</option>
-		<option value="viuvo"> Viúvo</option>
-	</select>
-	Nr de filhos:
-	<input type="number" name="escala" min="0" max="5" step="1"> <br>
-</fieldset>
-<fieldset>
-	<legend>Contactos:</legend> 
-	<!-- Corrigir o atributo type do input -->
-	Código-Postal
-	<input type="Código-Postal">
-	<p></p>
-	Morada:
-	<form>
-		<textarea rows="5" cols="100">
-		</textarea>
-	</form>
-	<p></p>
-	Email:
-	<input type="Email" name="Email:"><br>
-	<p></p>
-	Password:
-	<input type="Password" name="Password:">
-</fieldset>
-</article> <!-- retirar este elemento que fecha o article que já retiraste acima -->
-
-<i><small>Pretendo ser contactado através de:</i></small>
-<input type="checkbox" name="Email" checked>Email
-<input type="checkbox" name="Telemovel" checked>Telemóvel
-<input type="checkbox" name="Correio" checked>Correio
-<form>
-	<button type="button">Limpar</button>
-	<button type="button">Confirmar</button>
-</form>
-<p></p>
-	<!-- Para melhorar colocar a informação do rodapé dentro de <div> visualmente neste momento não faz nada mas vai ser útil no futuro -->
-	<!-- Falta ligação à âncora do menu -->
-	<footer> 
-	Praceta das Flores, 35<a name="Contactos"></a><br>
-	0000-100 Porto
-	<p></p>
-	Tel: 22 000 00 00
-	<p></p>
-	Horário: 9:00 ás 19:00
-	</footer>
+		<footer id="contactos">
+			<div>
+				<p>Praceta das Flores, 35 <br> 0000-100 Porto </p>
+			</div> 
+			<div>
+				<p>Tel: 22 000 00 00</p>
+				<p>Horário: 9:00h ás 19:00h</p>
+			</div>
+		</footer>
 </body>
 </html>
