--- a/Biblioteca2/index.html
+++ b/Biblioteca2/index.html
@@ -11,8 +11,8 @@
 	<nav>
 		<ul>	
 			<li><a href="#biblioteca">A biblioteca</a></li>
-			<li><a href="#serviços">Serviços e Atividades</a></li>
-			<li><a href="#membro">Torna-te membro</a></li>
+			<li><a href="servicos.html">Serviços e Atividades</a></li>
+			<li><a href="membro.html">Torna-te membro</a></li>
 			<li><a href="#contactos">Contactos</a></li>
 		</ul>
 	</nav>
@@ -20,111 +20,6 @@
 			<h1>A Biblioteca <!-- <a name="Biblioteca"></a> --> </h1>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 			<img src="./img/livros.jpeg">
-		</section>
-		<section id="servicos">
-			<h1>Serviços e Atividades<a name="Serviços"></a></h1>
-			<h2>Aqui podes encontrar informação sobre os nossos serviços e actividades</h2>
-			<br>
-			<h3>Serviços</h3>
-			<ul>
-				<li>Acesso a repositórios especializados em diversas áreas</li>
-				<li>Wireless gratuito</li>
-				<li>Máquina e bebidas e snacks</li>
-			</ul>
-			<h3>Atividades</h3>
-			<ul>
-				<li>Hora do conto</li>
-				<ol>
-					<li>10:00 ás 11:00 dos 3 aos 5 anos</li>
-					<li>11.00 ás 12:00 dos 6 aos 10 anos</li>
-				</ol>
-				<li>Manhãs com livros</li>
-				<ol>
-					<li>Clube do livro policial - 1º sábado de cada mês</li>
-					<li>Clube do livro romance histórico - 3º sábado de cada mês</li>
-				</ol>
-				<li>Cinema à sexta</li>
-				<ol>
-					<li>Cinema do mundo</li>
-					<li>Desenhos animados</li>
-					<li>Documentários</li>
-					<li>Filmes premiados</li>
-				</ol>
-			</ul>
-		</section>
-		<section id="membro">
-			<h1>Torna-te membro</h1>
-			<h2>É simples e rápido</h2>
-			<table border="1">
-				<thead>
-					<td></td>
-					<td>Acesso</td>
-					<td>Actividades</td>
-					<td>Preço</td>
-				</thead>
-				<tr>
-					<td>Cartão Livrólico</td>
-					<td>Acesso ás nossas instalações todos os dias</td>
-					<td>Participação gratuita em todas as atividades</td>
-					<td>15€/Ano</td>
-				</tr>
-				<tr>
-					<td>Cartão Amigo dos Livros</td>
-					<td>Acesso às nossas instalações todos os dias</td>
-					<td>Não inclui atividades gratuitas</td>
-					<td>8€/Ano</td>
-				</tr>
-				<tr>
-					<td colspan="4">*Temos descontos para famílias, consulte as condições</td>
-				</tr>
-			</table>
-			<br/>
-			<form>
-				<fieldset>
-				<legend>Dados pessoais:</legend>br></legend>
-				<select name="Opção">
-					<option value="cartao livrolico">Cartão Livrólico</option>
-					<option value="cartao amigo">Cartão Amigo dos Livros</option>
-				</select>
-				</fieldset>
-			<fieldset>
-				<legend><b>Dados pessoais:</b></legend> 
-				Nome: <input type="text" name="nome"><br> Sexo:
-				<input type="radio" name="genero" value="Masculino" checked> Masculino
-				<input type="radio" name="genero" value="Feminino"> Feminino <br><br>
-				Data de Nascimento: <input type="date" name="nascimento"> <br> <br>
-				Estado Civil:
-				<select name="escolha uma opcao">
-					<option value="escolha" disabled selected>Escolha uma opção</option>
-					<option value="casado"> Casado</option>
-					<option value="solteiro"> Solteiro</option>
-					<option value="divorciado"> Divorciado</option>
-					<option value="viuvo"> Viúvo</option>
-				</select> 
-				Nr de filhos: <input type="number" name="escala" min="0" max="5" step="1"> <br>
-			</fieldset>
-			<br><br>
-			<fieldset>
-				<legend><b>Contactos:</b></legend> 
-				Código-Postal
-				<input type="text" name="indicativo" placeholder="0000" pattern="[0-9]{4}" size="4" title="Pf insira o indicativo de quatro dígitos.">
-				<input type="text" name="extensao" placeholder="000" pattern="[0-9]{3}" size="3" title="Pf insira a extensão de 3 dígitos.">
-				<br><br>Morada:<br>
-				<textarea name="morada" rows="5" cols="100"></textarea>
-				<br><br>Email:<input type="email" name="email:" placeholder="exemplo@hotmail.com">
-				<br><br>Password: <input type="password" name="password:">
-			</fieldset>
-			<div>
-				<small>
-				<i>Pretendo ser contactado através de:</i>
-				<input type="checkbox" name="Email" checked>Email
-				<input type="checkbox" name="Telemovel" checked>Telemóvel
-				<input type="checkbox" name="Correio" checked>Correio
-				</small><br>
-				<input type="limpar" value="Limpar">
-				<input type="confirmar" value="Confirmar">
-			</div>
-		</form>
 		</section>
 		<footer id="contactos">
 			<div>
